--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Refresh" content="2; url=build/index.html">
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 	<script src="index.js"></script>
-    <div>Test</div>
+    <div>Test 2</div>
   </body>
 </html>
